# shaunlib

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  TODO.md  fourmolu.yaml  shaunlib.cabal  testdata.json
app/: Main.hs
src/: MyLib.hs  Shaunlib.hs
src/Shaunlib/: AppEnv.hs
src/Shaunlib/Internal/: Gateway.hs  Utils.hs
