cabal-version:      3.12
name:               shaunlib
version:            0.1.0.0
license:            MPL-2.0
license-file:       LICENSE
author:             sebastianselander
maintainer:         sebastian.selander@gmail.com
category:           Discord
build-type:         Simple

extra-doc-files:    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall

common extensions
    default-extensions:
        DerivingVia,
        NoListTuplePuns,
        OverloadedStrings,
        TypeApplications,

library
    -- Import common warning flags.
    import:
        warnings,
        extensions,

    -- Modules exported by the library.
    exposed-modules:
        Shaunlib,

    -- Modules included in this library but not exported.
    -- other-modules:

    -- Other library packages from which modules are imported.
    build-depends:
        base >=4.20.0.0,

        aeson,
        bytestring,
        ghc-experimental,
        text,
        websockets,
        wuss,

    -- Directories containing source files.
    hs-source-dirs:   src

    -- Base language which the package is written in.
    default-language: GHC2024

executable shaunlib-exe
    -- Import common warning flags.
    import:
        warnings,
        extensions,

    -- Base language which the package is written in.
    default-language: GHC2024

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Directories containing source files.
    hs-source-dirs:   app

    -- The entrypoint to the test suite.
    main-is:          Main.hs

    -- Test dependencies.
    build-depends:
        base >=4.18.0.0,
        shaunlib,

        ghc-experimental,

test-suite shaunlib-test
    -- Import common warning flags.
    import:           warnings

    -- Base language which the package is written in.
    default-language: GHC2024

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- The interface type and version of the test suite.
    type:             exitcode-stdio-1.0

    -- Directories containing source files.
    hs-source-dirs:   test

    -- The entrypoint to the test suite.
    main-is:          Main.hs

    -- Test dependencies.
    build-depends:
        base >=4.18.0.0,
        shaunlib
